--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -1,24 +1,158 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="F8d-q6-jqi">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Journal-->
+        <scene sceneID="BtG-7D-xik">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="w2F-Jy-3xH" customClass="EntriesTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="JQA-Ko-0PL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="60" id="B2G-BN-emH" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="60"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="B2G-BN-emH" id="oIr-VQ-DEg">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="59.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="285" translatesAutoresizingMaskIntoConstraints="NO" id="lM0-WH-Fcb">
+                                            <rect key="frame" x="20" y="8" width="374" height="20.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFy-Z3-vDB">
+                                                    <rect key="frame" x="0.0" y="0.0" width="56" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ESH-bG-YRa">
+                                                    <rect key="frame" x="341" y="0.0" width="33" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Al6-sp-avs">
+                                            <rect key="frame" x="20" y="36.5" width="334" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="lM0-WH-Fcb" firstAttribute="top" secondItem="oIr-VQ-DEg" secondAttribute="top" constant="8" id="Sb0-Rl-Ey7"/>
+                                        <constraint firstItem="lM0-WH-Fcb" firstAttribute="leading" secondItem="oIr-VQ-DEg" secondAttribute="leading" constant="20" id="Wmf-uU-Jji"/>
+                                        <constraint firstAttribute="trailing" secondItem="lM0-WH-Fcb" secondAttribute="trailing" constant="20" id="bZw-BS-3qe"/>
+                                        <constraint firstAttribute="trailing" secondItem="Al6-sp-avs" secondAttribute="trailing" constant="60" id="dzg-SF-diW"/>
+                                        <constraint firstItem="Al6-sp-avs" firstAttribute="leading" secondItem="oIr-VQ-DEg" secondAttribute="leading" constant="20" id="mFv-1P-RDE"/>
+                                        <constraint firstItem="Al6-sp-avs" firstAttribute="top" secondItem="lM0-WH-Fcb" secondAttribute="bottom" constant="8" id="zLw-AE-t8W"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="dateLabel" destination="ESH-bG-YRa" id="6l7-A7-Lz8"/>
+                                    <outlet property="entryPreviewLabel" destination="Al6-sp-avs" id="ofm-Ec-g8h"/>
+                                    <outlet property="nameLabel" destination="HFy-Z3-vDB" id="URV-2N-5IK"/>
+                                    <segue destination="8Vk-zS-bzP" kind="show" identifier="ShowJournalEntry" id="jO7-SD-yel"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="w2F-Jy-3xH" id="dsD-DH-iSB"/>
+                            <outlet property="delegate" destination="w2F-Jy-3xH" id="QIU-u5-aqg"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Journal" id="qfs-GO-FAa">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="LRd-aF-DSH">
+                            <connections>
+                                <segue destination="8Vk-zS-bzP" kind="show" identifier="AddJournalEntry" id="ypf-ya-Hyh"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qw2-ZF-VpH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="394.20289855072468" y="26.785714285714285"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="P2T-Ky-WC4">
+            <objects>
+                <viewController id="8Vk-zS-bzP" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BhK-S8-Xr6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="NlI-ru-8Il">
+                                <rect key="frame" x="16" y="156" width="382" height="584"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y7F-p7-YTy">
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="V1J-1v-YZf">
+                                        <rect key="frame" x="0.0" y="50" width="382" height="534"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.90040716876838411" green="0.90040716876838411" blue="0.90040716876838411" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="NlI-ru-8Il" firstAttribute="top" secondItem="Gbq-XU-kf0" secondAttribute="top" constant="16" id="60R-ZL-rkW"/>
+                            <constraint firstItem="NlI-ru-8Il" firstAttribute="leading" secondItem="Gbq-XU-kf0" secondAttribute="leading" constant="16" id="MwR-lQ-s89"/>
+                            <constraint firstItem="NlI-ru-8Il" firstAttribute="centerY" secondItem="BhK-S8-Xr6" secondAttribute="centerY" id="fmG-QR-30R"/>
+                            <constraint firstItem="Gbq-XU-kf0" firstAttribute="trailing" secondItem="NlI-ru-8Il" secondAttribute="trailing" constant="16" id="tyz-xN-hbX"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Gbq-XU-kf0"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="MeP-pk-1ov">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="AcX-nr-edL">
+                            <connections>
+                                <action selector="save:" destination="8Vk-zS-bzP" id="bbu-ox-5jL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="nameTextField" destination="y7F-p7-YTy" id="dmS-HO-Iq7"/>
+                        <outlet property="noteTextView" destination="V1J-1v-YZf" id="nxY-tJ-3dW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Vm-Ct-W9e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1167" y="27"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="aYd-lQ-k9D">
+            <objects>
+                <navigationController id="F8d-q6-jqi" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="SpS-TY-aXg">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="w2F-Jy-3xH" kind="relationship" relationship="rootViewController" id="hOb-1d-0jb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qRf-AO-6jk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-345" y="27"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="jO7-SD-yel"/>
+    </inferredMetricsTieBreakers>
 </document>
