--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -26,37 +26,43 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="285" translatesAutoresizingMaskIntoConstraints="NO" id="lM0-WH-Fcb">
-                                            <rect key="frame" x="20" y="8" width="374" height="20.5"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Rar-lK-30I">
+                                            <rect key="frame" x="20" y="8" width="374" height="43.5"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFy-Z3-vDB">
-                                                    <rect key="frame" x="0.0" y="0.0" width="56" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ESH-bG-YRa">
-                                                    <rect key="frame" x="341" y="0.0" width="33" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="lM0-WH-Fcb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="18"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFy-Z3-vDB">
+                                                            <rect key="frame" x="0.0" y="0.0" width="234" height="18"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ESH-bG-YRa">
+                                                            <rect key="frame" x="264" y="0.0" width="110" height="18"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="110" id="iZK-zR-30p"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Al6-sp-avs">
+                                                    <rect key="frame" x="0.0" y="26" width="374" height="17.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </stackView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Al6-sp-avs">
-                                            <rect key="frame" x="20" y="36.5" width="334" height="18"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="lM0-WH-Fcb" firstAttribute="top" secondItem="oIr-VQ-DEg" secondAttribute="top" constant="8" id="Sb0-Rl-Ey7"/>
-                                        <constraint firstItem="lM0-WH-Fcb" firstAttribute="leading" secondItem="oIr-VQ-DEg" secondAttribute="leading" constant="20" id="Wmf-uU-Jji"/>
-                                        <constraint firstAttribute="trailing" secondItem="lM0-WH-Fcb" secondAttribute="trailing" constant="20" id="bZw-BS-3qe"/>
-                                        <constraint firstAttribute="trailing" secondItem="Al6-sp-avs" secondAttribute="trailing" constant="60" id="dzg-SF-diW"/>
-                                        <constraint firstItem="Al6-sp-avs" firstAttribute="leading" secondItem="oIr-VQ-DEg" secondAttribute="leading" constant="20" id="mFv-1P-RDE"/>
-                                        <constraint firstItem="Al6-sp-avs" firstAttribute="top" secondItem="lM0-WH-Fcb" secondAttribute="bottom" constant="8" id="zLw-AE-t8W"/>
+                                        <constraint firstAttribute="bottom" secondItem="Rar-lK-30I" secondAttribute="bottom" constant="8" id="DEC-5T-FFK"/>
+                                        <constraint firstItem="Rar-lK-30I" firstAttribute="leading" secondItem="oIr-VQ-DEg" secondAttribute="leading" constant="20" id="Kb8-bv-gGI"/>
+                                        <constraint firstItem="Rar-lK-30I" firstAttribute="top" secondItem="oIr-VQ-DEg" secondAttribute="top" constant="8" id="Src-fM-rUQ"/>
+                                        <constraint firstAttribute="trailing" secondItem="Rar-lK-30I" secondAttribute="trailing" constant="20" id="l3h-2v-JBn"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -127,8 +133,8 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="nameTextField" destination="y7F-p7-YTy" id="dmS-HO-Iq7"/>
-                        <outlet property="noteTextView" destination="V1J-1v-YZf" id="nxY-tJ-3dW"/>
+                        <outlet property="bodyTextView" destination="V1J-1v-YZf" id="qD4-40-wjO"/>
+                        <outlet property="titleTextField" destination="y7F-p7-YTy" id="HcD-JL-RYE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Vm-Ct-W9e" userLabel="First Responder" sceneMemberID="firstResponder"/>
