--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -90,7 +90,7 @@
             </objects>
             <point key="canvasLocation" x="394.20289855072468" y="26.785714285714285"/>
         </scene>
-        <!--Title-->
+        <!--Entry Detail View Controller-->
         <scene sceneID="P2T-Ky-WC4">
             <objects>
                 <viewController id="8Vk-zS-bzP" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
@@ -101,15 +101,15 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="NlI-ru-8Il">
                                 <rect key="frame" x="16" y="156" width="382" height="584"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y7F-p7-YTy">
-                                        <rect key="frame" x="0.0" y="0.0" width="382" height="30"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter a title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y7F-p7-YTy">
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="44"/>
                                         <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="32"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="V1J-1v-YZf">
-                                        <rect key="frame" x="0.0" y="50" width="382" height="534"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <rect key="frame" x="0.0" y="64" width="382" height="520"/>
+                                        <color key="backgroundColor" red="0.90040716880000005" green="0.90040716880000005" blue="0.90040716880000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
@@ -125,7 +125,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Gbq-XU-kf0"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="MeP-pk-1ov">
+                    <navigationItem key="navigationItem" id="MeP-pk-1ov">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="AcX-nr-edL">
                             <connections>
                                 <action selector="save:" destination="8Vk-zS-bzP" id="bbu-ox-5jL"/>
@@ -134,6 +134,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="V1J-1v-YZf" id="qD4-40-wjO"/>
+                        <outlet property="saveButton" destination="AcX-nr-edL" id="hSx-ge-rGH"/>
                         <outlet property="titleTextField" destination="y7F-p7-YTy" id="HcD-JL-RYE"/>
                     </connections>
                 </viewController>
