--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -126,7 +126,7 @@
                         <viewLayoutGuide key="safeArea" id="Gbq-XU-kf0"/>
                     </view>
                     <navigationItem key="navigationItem" id="MeP-pk-1ov">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="AcX-nr-edL">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="AcX-nr-edL">
                             <connections>
                                 <action selector="save:" destination="8Vk-zS-bzP" id="bbu-ox-5jL"/>
                             </connections>
