Improve display of entry body text

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -32,14 +32,14 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Journal Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SmK-eh-oYV">
-                                            <rect key="frame" x="20" y="40" width="374" height="18"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Journal Entry" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SmK-eh-oYV">
+                                            <rect key="frame" x="20" y="43" width="374" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MM/DD/YY HH:MM AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tf5-zU-lqC">
-                                            <rect key="frame" x="255" y="11" width="139" height="16"/>
+                                            <rect key="frame" x="255" y="16" width="139" height="16"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -48,11 +48,11 @@
                                     <constraints>
                                         <constraint firstItem="SmK-eh-oYV" firstAttribute="leading" secondItem="yax-Ik-Tbx" secondAttribute="leadingMargin" id="4Ym-RL-KEo"/>
                                         <constraint firstItem="tf5-zU-lqC" firstAttribute="leading" secondItem="BUR-rS-rgj" secondAttribute="trailing" constant="122" id="EjD-gz-dmH"/>
-                                        <constraint firstItem="SmK-eh-oYV" firstAttribute="top" secondItem="BUR-rS-rgj" secondAttribute="bottom" constant="5" id="HcT-tK-py3"/>
+                                        <constraint firstItem="SmK-eh-oYV" firstAttribute="top" secondItem="BUR-rS-rgj" secondAttribute="bottom" constant="8" id="HcT-tK-py3"/>
                                         <constraint firstItem="BUR-rS-rgj" firstAttribute="leading" secondItem="yax-Ik-Tbx" secondAttribute="leadingMargin" id="S1r-k7-jmo"/>
                                         <constraint firstItem="BUR-rS-rgj" firstAttribute="top" secondItem="yax-Ik-Tbx" secondAttribute="topMargin" id="Waf-u5-t6v"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="SmK-eh-oYV" secondAttribute="trailing" id="eB8-pp-PTe"/>
-                                        <constraint firstItem="tf5-zU-lqC" firstAttribute="top" secondItem="yax-Ik-Tbx" secondAttribute="topMargin" id="nL7-aM-NBN"/>
+                                        <constraint firstItem="tf5-zU-lqC" firstAttribute="top" secondItem="yax-Ik-Tbx" secondAttribute="topMargin" constant="5" id="nL7-aM-NBN"/>
                                         <constraint firstItem="tf5-zU-lqC" firstAttribute="trailing" secondItem="yax-Ik-Tbx" secondAttribute="trailingMargin" id="sJ5-GC-0sL"/>
                                     </constraints>
                                 </tableViewCellContentView>
