--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -107,8 +107,16 @@
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="32"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="j9B-lb-tso">
+                                        <rect key="frame" x="0.0" y="64" width="382" height="29"/>
+                                        <segments>
+                                            <segment title="😁"/>
+                                            <segment title="😐"/>
+                                            <segment title="🥺"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="V1J-1v-YZf">
-                                        <rect key="frame" x="0.0" y="64" width="382" height="520"/>
+                                        <rect key="frame" x="0.0" y="112" width="382" height="472"/>
                                         <color key="backgroundColor" red="0.90040716880000005" green="0.90040716880000005" blue="0.90040716880000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -134,6 +142,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="V1J-1v-YZf" id="qD4-40-wjO"/>
+                        <outlet property="moodControl" destination="j9B-lb-tso" id="MSr-RG-lXj"/>
                         <outlet property="saveButton" destination="AcX-nr-edL" id="hSx-ge-rGH"/>
                         <outlet property="titleTextField" destination="y7F-p7-YTy" id="HcD-JL-RYE"/>
                     </connections>
